Added simple validation to order form

--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -29,3 +29,9 @@
 .InputElement:focus {
     outline: none;
 }
+
+.Invalid {
+    border: 1px solid red;
+    background-color: #fda49a;
+    color: red;
+}
