--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -5,6 +5,9 @@
     padding: 40px 20px;
 
     box-shadow: 1px 1px 2px 1px #848484;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 .PageHeader {
