--- a/src/components/Burger/Burger.css
+++ b/src/components/Burger/Burger.css
@@ -1,4 +1,5 @@
 .Burger {
+    max-width: 500px;
     width: 100%;
     margin: auto;
     height: 250px;
@@ -7,7 +8,6 @@
     font-weight: bold;
     font-size: 1.2rem;
 }
-
 
 @media (min-width: 500px) and (min-height: 401px)  {
     .Burger {
