--- a/src/components/UI/Modal/Modal.css
+++ b/src/components/UI/Modal/Modal.css
@@ -1,20 +1,20 @@
 .Modal {
     position: fixed;
-    z-index: 500;
-    background-color: white;
+    left: 50%;
+    top: 50%;
     width: 70%;
-    border: 1px solid #ccc;
-    box-shadow: 1px 1px 1px black;
+    background-color: white;
     padding: 16px;
-    left: 15%;
-    top: 30%;
+    box-shadow: 1px 1px 1px black;
+    border: 1px solid #ccc;
     box-sizing: border-box;
-    transition: all 0.3s ease-out;
+    opacity: 0;
+    transition: 0.3s ease-out;
+    z-index: 500;
 }
 
 @media (min-width: 600px) {
     .Modal {
         width: 500px;
-        left: calc(50% - 250px);
     }
 }
